# guess-the-card

./: .env.example  README.md  cli.py  config.py  models.py  postgres.py  pyproject.toml
.github/workflows/: ai-pr-reviewer.yml
src/: cli.py  config.py  models.py  prompts.py
src/fine_tuning/: openai_upload.py
src/fine_tuning/data/: 20231031-openai-tuning.jsonl
src/models/: __init__.py  llms.py  mock.py  models.py  together.py  together_hack.py
