[tool.poetry]
name = "guess-the-card"
version = "0.1.0"
description = ""
authors = ["Aaron Bannin <aaronbannin@Aarons-MacBook-Pro.local>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.20"
psycopg2 = "^2.9.7"
langchain = "^0.0.330"
openai = "^0.28.0"
flake8 = "^6.1.0"
black = "^23.9.1"
flake8-black = "^0.3.6"
wrapt-timeout-decorator = "^1.4.0"
together = "^0.2.6"
ratelimit = "^2.2.1"

[tool.black]
line-length = 88
include = '\.pyi?$'
experimental-string-processing = true
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
